--- a/samples/src/main/res/layout/activity_settings_compat.xml
+++ b/samples/src/main/res/layout/activity_settings_compat.xml
@@ -19,28 +19,9 @@
  * =================================================================================================
  */
 -->
-<manifest package="universum.studios.android.samples.setting"
-		  xmlns:android="http://schemas.android.com/apk/res/android">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+			  android:layout_width="match_parent"
+			  android:layout_height="match_parent"
+			  android:orientation="vertical">
 
-	<application
-		android:allowBackup="true"
-		android:icon="@mipmap/samples_ic_launcher"
-		android:label="@string/app_name"
-		android:supportsRtl="true"
-		android:theme="@style/Theme">
-
-		<activity
-			android:name=".ui.MainActivity"
-			android:theme="@style/Theme.Navigation">
-			<intent-filter>
-				<action android:name="android.intent.action.MAIN" />
-				<category android:name="android.intent.category.LAUNCHER" />
-			</intent-filter>
-
-			<meta-data android:name="universum.studios.android.samples.SamplesMetaData.NAVIGATION_MENU" android:resource="@menu/navigation"/>
-			<meta-data android:name="universum.studios.android.samples.SamplesMetaData.INTRO_TEXT" android:resource="@string/app_intro"/>
-		</activity>
-
-		<activity android:name=".ui.SettingsActivity" />
-	</application>
-</manifest>
+</LinearLayout>
