--- a/library-core/src/main/res/values/ui_settings_attrs.xml
+++ b/library-core/src/main/res/values/ui_settings_attrs.xml
@@ -80,6 +80,8 @@
 	<!-- SettingsPreference attributes. -->
 	<declare-styleable name="Ui.Settings.Preference">
 		<!-- Re-used. -->
+		<attr name="android:defaultValue"/>
+		<!-- Re-used. -->
 		<attr name="uiVectorIcon"/>
 	</declare-styleable>
 </resources>
